# Evolution_of_Todo

./: .gitignore  README.md  bash.exe.stackdump  pyproject.toml
.claude/: settings.local.json
.claude/agents/: hackathon-controller.md
.specify/memory/: constitution.md
history/prompts/001-todo-app/: 6-phase2-overview-specification.spec.prompt.md
history/prompts/003-backend-api/: 001-backend-implementation.green.prompt.md
history/prompts/backend-api/: 2-backend-api-specification.spec.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
history/prompts/frontend-todo-app/: 1-frontend-todo-web-app-spec.spec.prompt.md  2-frontend-todo-web-app-plan.plan.prompt.md  3-frontend-todo-web-app-tasks.tasks.prompt.md  4-frontend-todo-web-app-implementation.implementation.prompt.md
phase-01-console-app/: README.md  requirements.txt
phase-01-console-app/tests/: __init__.py
phase-02-web-app/backend/: .env.example  .gitignore  Dockerfile  README.md  app.py  huggingface.yml  requirements.txt  test_changes.py
phase-02-web-app/frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-frontend-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/models/: task.py
tests/unit/: test_task.py  test_todo_service.py
(+42 files in other folders)
