[project]
name = "todo-app"
version = "0.1.0"
description = "A command-line todo application storing tasks in memory"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Developer", email = "developer@example.com"}
]
dependencies = [
    "rich>=13.0.0"
]

[project.scripts]
todo-app = "src.cli.todo_app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]